kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickzen-backend
  namespace: tickzen
  labels:
    app: tickzen-backend
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tickzen-backend
  template:
    metadata:
      labels:
        app: tickzen-backend
    spec:
      containers:
      - name: backend
        image: prakash1142/mean-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 300m
            memory: 400Mi
        startupProbe:
          httpGet:
            path: /api/health
            port: 5000
          failureThreshold: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: uploads-volume
          mountPath: /app/uploads
      volumes:
      - name: uploads-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: tickzen-backend-service
  namespace: tickzen
spec:
  selector:
    app: tickzen-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
