kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickzen-frontend
  namespace: tickzen
  labels:
    app: tickzen-frontend
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tickzen-frontend
  template:
    metadata:
      labels:
        app: tickzen-frontend
    spec:
      containers:
      - name: frontend
        image: prakash1142/mean-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 150Mi
          limits:
            cpu: 200m
            memory: 250Mi
        startupProbe:
          httpGet:
            path: /
            port: 3000
          failureThreshold: 15
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: tickzen-frontend-service
  namespace: tickzen
spec:
  selector:
    app: tickzen-frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
